@@ -2,6 +2,11 @@ cdebconf (0.85) UNRELEASED; urgency=low
 
   * Initialise all fields of the gtk frontend data. Should fix several
     crashes.
+  * Don't crash if display_dummy_main_menu() is called while we don't have a
+    main-menu tag, e.g. if a progress bar is started before asking any
+    questions at high priority. This is just a hack; Attilio needs to
+    investigate the right solution. Reducing the amount of hardcoding of
+    main-menu would be nice ...
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 10 Aug 2005 18:20:15 +0100
 
